cmake_minimum_required(VERSION 4.0)
project(p3_part3)

set(CMAKE_CXX_STANDARD 20)

add_executable( p3_part3

        main.cpp
        Scanner.cpp
        Scanner.hpp
        utils.cpp
        utils.hpp
        BinSearchTree.cpp
        BinSearchTree.hpp
        PriorityQueue.cpp
        PriorityQueue.hpp
        input_output/
        HuffmanTree.cpp
        HuffmanTree.cpp

)
